--- a/tasks/langs/ruby.yml
+++ b/tasks/langs/ruby.yml
@@ -1,7 +1,7 @@
 - name: Install gems
   gem:
     name: "{{ item }}"
-    state: latest
+    state: present
     user_install: no
   with_items:
     - mdl
