--- a/tasks/langs/node.yml
+++ b/tasks/langs/node.yml
@@ -14,6 +14,7 @@
     - eslint
     - livedown
     - babel-eslint
+    - babel-preset-stage-0
     - eslint-plugin-react
     - eslint-plugin-flowtype
     - eslint-plugin-import
