Add spotify and java sdk

--- a/tasks/langs/ruby.yml
+++ b/tasks/langs/ruby.yml
@@ -2,7 +2,7 @@
   gem:
     name: "{{ item }}"
     state: present
-    user_install: no
+    user_install: yes
   with_items:
     - mdl
     - haml-lint
